Bug 1141333: Mark reader has ended when EndOfStream explicit. r=mattwoodrow